@@ -23,5 +23,23 @@ to call at top-level: ant deploy-contrib compile-core-test
 -->
 <project name="indexed" default="jar">
   <import file="../build-contrib.xml"/>
-      
+
+  <property name="lib.dir" value="${basedir}/lib"/> 
+
+  <!--Override ../build-contrib.xml package-->
+  <target name="package" depends="jar" unless="skip.contrib">
+    <mkdir dir="${dist.dir}/contrib/${name}"/>
+    <copy todir="${dist.dir}/contrib/${name}" includeEmptyDirs="false" flatten="true">
+      <fileset dir="${build.dir}">
+        <include name="hbase-${version}-${name}.jar" />
+      </fileset>
+    </copy>
+    <mkdir dir="${dist.dir}/contrib/${name}/lib"/>
+    <copy todir="${dist.dir}/contrib/${name}/lib" overwrite="true">
+      <fileset dir="${lib.dir}">
+        <include name="commons-lang-*.jar" />
+      </fileset>
+    </copy>
+  </target>
+ 
 </project>
